--- a/app/do-it.html
+++ b/app/do-it.html
@@ -9,9 +9,16 @@
 	<script type="text/javascript" src="./lib/angularjs/angular.min.js"></script>
 	<script type="text/javascript" src="./lib/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="./lib/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="./src/do-it.js"></script>
+	<script type="text/javascript" src="./src/do-it-app.js"></script>
+	<script type="text/javascript" src="./src/do-it-text-service.js"></script>
+	<script type="text/javascript" src="./src/do-it-controller.js"></script>
 </head>
 <body data-ng-app="doItApp" data-ng-controller="DoItController">
-	{{doIt}}
+	<div class="container">
+		<div class="col-xs-12">{{doIt.text}}</div>
+		<div class="col-xs-12">
+			<button type="button" class="btn btn-lg btn-info col-xs-12" data-ng-click="getRandomDoIt()">Motivate Me!</button>
+		</div>
+	</div>
 </body>
 </html>
