--- a/app/do-it.html
+++ b/app/do-it.html
@@ -12,6 +12,8 @@
 	<script type="text/javascript" src="./src/do-it-app.js"></script>
 	<script type="text/javascript" src="./src/do-it-text-service.js"></script>
 	<script type="text/javascript" src="./src/do-it-controller.js"></script>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 </head>
 <body data-ng-app="doItApp" data-ng-controller="DoItController">
 	<div class="container">
