--- a/app/do-it.html
+++ b/app/do-it.html
@@ -10,7 +10,7 @@
 	<script type="text/javascript" src="./lib/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="./lib/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="./src/do-it-app.js"></script>
-	<script type="text/javascript" src="./src/do-it-text-service.js"></script>
+	<script type="text/javascript" src="./src/do-it-quote-service.js"></script>
 	<script type="text/javascript" src="./src/do-it-image-service.js"></script>
 	<script type="text/javascript" src="./src/do-it-controller.js"></script>
 
@@ -18,17 +18,20 @@
 </head>
 <body data-ng-app="doItApp" data-ng-controller="DoItController">
 	<div class="container">
-		<div class="col-xs-6" ng-class="{'col-xs-push-6': doIt.image.orientation === 'left'}" >
-			<blockquote ng-if="doIt.text" ng-class="{'blockquote-reverse': doIt.image.orientation === 'right'}">
-				<p>{{doIt.text}}</p>
-			</blockquote>
+		<div ng-if="doIt.quote != null">
+			<div class="col-xs-6" ng-class="{'col-xs-push-6': doIt.image.orientation === 'left'}" >
+				<blockquote ng-class="{'blockquote-reverse': doIt.image.orientation === 'right'}">
+					<p>{{doIt.quote.text}}</p>
+				</blockquote>
+			</div>
+			<div class="col-xs-6" ng-class="{'col-xs-pull-6': doIt.image.orientation === 'left'}">
+				<img class="img-responsive text-center" ng-src="{{DoItImage.baseUrl + doIt.image.path}}" />
+			</div>
 		</div>
-		<div class="col-xs-6" ng-class="{'col-xs-pull-6': doIt.image.orientation === 'left'}">
-			<img class="img-responsive text-center" ng-src="{{doIt.image.path}}" />
-		</div>
-		<div class="col-xs-12">
-			<button type="button" class="btn btn-lg btn-info col-xs-12" data-ng-click="getRandomDoIt()">Motivate Me!</button>
-		</div>
+		<button type="button" class="btn btn-lg btn-info dropdown-toggle col-xs-1" ng-click="withAudio = !withAudio" style="border-top-right-radius: 0; border-bottom-right-radius: 0;">
+			<span class="glyphicon" ng-class="{'glyphicon-volume-up': withAudio, 'glyphicon-volume-off': !withAudio}"></span>
+		</button>
+		<button type="button" class="btn btn-lg btn-info col-xs-11" data-ng-click="getRandomDoIt()" style="border-top-left-radius: 0; border-bottom-left-radius: 0;">Motivate Me!</button>
 	</div>
 </body>
 </html>
