--- a/app/do-it.html
+++ b/app/do-it.html
@@ -15,6 +15,8 @@
 	<script type="text/javascript" src="./src/do-it-controller.js"></script>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+    <link rel='icon' type='image/png' href='./src/assets/favicon.crush.png'>
 </head>
 <body data-ng-app="doItApp" data-ng-controller="DoItController">
 	<div class="container">
@@ -28,10 +30,10 @@
 				<img class="img-responsive text-center" ng-src="{{DoItImage.baseUrl + doIt.image.path}}" />
 			</div>
 		</div>
-		<button type="button" class="btn btn-lg btn-info dropdown-toggle col-xs-1" ng-click="withAudio = !withAudio" style="border-top-right-radius: 0; border-bottom-right-radius: 0;">
+		<button type="button" class="btn btn-lg btn-info dropdown-toggle col-xs-2 col-sm-1" ng-click="withAudio = !withAudio" style="border-top-right-radius: 0; border-bottom-right-radius: 0;">
 			<span class="glyphicon" ng-class="{'glyphicon-volume-up': withAudio, 'glyphicon-volume-off': !withAudio}"></span>
 		</button>
-		<button type="button" class="btn btn-lg btn-info col-xs-11" data-ng-click="getRandomDoIt()" style="border-top-left-radius: 0; border-bottom-left-radius: 0;">Motivate Me!</button>
+		<button type="button" class="btn btn-lg btn-info col-xs-10 col-sm-11" data-ng-click="getRandomDoIt()" style="border-top-left-radius: 0; border-bottom-left-radius: 0;">Motivate Me!</button>
 	</div>
 </body>
 </html>
